Added first HTML/CSS and fitness mapping

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>Fitness Map</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+    <h1>Fitness Workout Locator</h1>
+    <input>
+    <button>Reset</button>
+    //Checkbox for filters
+</header>
+<section>
+    <div class="machine">Hejsa</div>
+    <img src="Fitness_Background.png">
+</section>
+<footer>
 
-
+</footer>
 </body>
 <script src="script.js"></script>
 </html>
