mongo api virker med params

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <h1>Fitness Workout Locator</h1>
-    <input>
+    <input id="searchbar">
     <button>Reset</button>
     //Checkbox for filters
 </header>
