checkbox check funktion

--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 <body>
 <header>
     <h1>Fitness Workout Locator</h1>
-    <input id="searchbar">
-    <button>Reset</button>
-    //Checkbox for filters
+    <nav>
+        <input id="searchbar">
+        <button>Reset</button>
+        <section>
+            <div>
+                <input type="checkbox">
+                <label>checkbox1</label>
+            </div>
+            <div>
+                <input type="checkbox">
+                <label>checkbox2</label>
+            </div>
+        </section>
+    </nav>
 </header>
 <section>
     <div class="machine">Hejsa</div>
