frontend is now talking with backend!

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <header>
     <h1>Fitness Workout Locator</h1>
     <nav>
-        <input id="searchbar">
-        <button>Reset</button>
         <section>
+            <input id="searchbar">
+        </section>
+        <section id="mucleFilter">
             <div>
                 <input type="checkbox">
                 <label>checkbox1</label>
@@ -21,6 +22,31 @@
                 <input type="checkbox">
                 <label>checkbox2</label>
             </div>
+            <div>
+                <input type="checkbox">
+                <label>checkbox3</label>
+            </div>
+            <div>
+                <input type="checkbox">
+                <label>checkbox4</label>
+            </div>
+        </section>
+        <section id="difficultyFilter">
+            <div>
+                <input type="checkbox">
+                <label>easy</label>
+            </div>
+            <div>
+                <input type="checkbox">
+                <label>medium</label>
+            </div>
+            <div>
+                <input type="checkbox">
+                <label>hard</label>
+            </div>
+        </section>
+        <section>
+            <button id="searchButton">Search</button>
         </section>
     </nav>
 </header>
