made a start on infotap with the updateInfoTap function

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <div class="machine">Hejsa</div>
     <img src="Fitness_Background.png">
 </section>
+<section id="infoTab">
+
+</section>
 <footer>
 
 </footer>
