--- a/index.html
+++ b/index.html
@@ -45,14 +45,110 @@
                 <label>hard</label>
             </div>
         </section>
+        <section id="machineFilter">
+            <div>
+                <input type="checkbox" name="machine" value="treadmill">
+                <label>Treadmill</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="bike">
+                <label>Bike</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="kettlebells">
+                <label>Kettlebell</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="cabletower">
+                <label>Cabletower</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="handweight">
+                <label>Handweight</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="legpress">
+                <label>Legpress</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="stairwalker">
+                <label>Stairwalker</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="skiing">
+                <label>Skiing</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="bench">
+                <label>Bench</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="abcrunch">
+                <label>Abcrunch</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="chestpress">
+                <label>Chestpress</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="deadlift">
+                <label>Deadlift</label>
+            </div>
+            <div>
+                <input type="checkbox" name="machine" value="seatedrow">
+                <label>Seatedrow</label>
+            </div>
+        </section>
         <section>
             <button id="searchButton">Search</button>
         </section>
     </nav>
 </header>
 <section>
-    <div class="machine">Hejsa</div>
     <img src="Fitness_Background.png">
+    <!-- TREADMILLS: -->
+    <div id="treadmill1" class="unselectedMachine"></div>
+    <div id="treadmill2" class="unselectedMachine"></div>
+    <div id="treadmill3" class="unselectedMachine"></div>
+    <div id="treadmill4" class="unselectedMachine"></div>
+    <div id="treadmill5" class="unselectedMachine"></div>
+    <!-- BIKES (NOT BIKESAL): -->
+    <div id="bike1" class="unselectedMachine"></div>
+    <div id="bike2" class="unselectedMachine"></div>
+    <div id="bike3" class="unselectedMachine"></div>
+    <div id="bike4" class="unselectedMachine"></div>
+    <div id="bike5" class="unselectedMachine"></div>
+    <!-- BIKES (BIKESAL): -->
+    <div id="bike6" class="unselectedMachine"></div>
+    <div id="bike7" class="unselectedMachine"></div>
+    <div id="bike8" class="unselectedMachine"></div>
+    <div id="bike9" class="unselectedMachine"></div>
+    <div id="bike10" class="unselectedMachine"></div>
+    <div id="bike11" class="unselectedMachine"></div>
+    <div id="bike12" class="unselectedMachine"></div>
+    <div id="bike13" class="unselectedMachine"></div>
+    <div id="bike14" class="unselectedMachine"></div>
+    <div id="bike15" class="unselectedMachine"></div>
+    <div id="bike16" class="unselectedMachine"></div>
+    <div id="bike17" class="unselectedMachine"></div>
+    <div id="bike18" class="unselectedMachine"></div>
+    <div id="bike19" class="unselectedMachine"></div>
+    <div id="bike20" class="unselectedMachine"></div>
+    <div id="bike21" class="unselectedMachine"></div>
+    <!-- KETTLEBELLS: -->
+    <div id="kettlebells1" class="unselectedMachine"></div>
+    <div id="kettlebells2" class="unselectedMachine"></div>
+    <!-- CABLETOWER: -->
+    <div id="cabletower" class="unselectedMachine"></div>
+    <div id="handweight" class="unselectedMachine"></div>
+    <div id="legpress" class="unselectedMachine"></div>
+    <div id="stairwalker" class="unselectedMachine"></div>
+    <div id="skiing" class="unselectedMachine"></div>
+    <div id="bench" class="unselectedMachine"></div>
+    <div id="abcrunch" class="unselectedMachine"></div>
+    <div id="chestpress" class="unselectedMachine"></div>
+    <div id="deadlift" class="unselectedMachine"></div>
+    <div id="seatedrow" class="unselectedMachine"></div>
 </section>
 <section id="infoTab">
 
