--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section id="mucleFilter">
             <div>
                 <input type="checkbox">
-                <label>checkbox1</label>
+                <label>bicpts</label>
             </div>
             <div>
                 <input type="checkbox">
