--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <input type="checkbox">
-                <label>checkbox2</label>
+                <label>core</label>
             </div>
             <div>
                 <input type="checkbox">
