--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             </div>
         </section>
         <section id="machineFilter">
+            <button id="toggleButton">Show Machines</button>
+            <div id="filterContent" style="display: none;">
             <div>
                 <input type="checkbox" name="machine" value="treadmill">
                 <label>Treadmill</label>
@@ -97,6 +99,7 @@
             <div>
                 <input type="checkbox" name="machine" value="seatedrow">
                 <label>Seatedrow</label>
+            </div>
             </div>
         </section>
         <section>
