--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </section>
     </nav>
 </header>
-<section>
+<section id="map">
     <img src="Fitness_Background.png">
     <!-- TREADMILLS: -->
     <div id="treadmill1" class="unselectedMachine"></div>
