made infobar better

--- a/index.html
+++ b/index.html
@@ -107,92 +107,97 @@
         </section>
     </nav>
 </header>
-<section id="map">
-    <img src="Fitness_Background.png">
-    <!-- TREADMILLS: -->
-    <div id="treadmill1" class="unselectedMachine"></div>
-    <div id="treadmill2" class="unselectedMachine"></div>
-    <div id="treadmill3" class="unselectedMachine"></div>
-    <div id="treadmill4" class="unselectedMachine"></div>
-    <div id="treadmill5" class="unselectedMachine"></div>
-    <!-- BIKES (NOT BIKESAL): -->
-    <div id="bike1" class="unselectedMachine"></div>
-    <div id="bike2" class="unselectedMachine"></div>
-    <div id="bike3" class="unselectedMachine"></div>
-    <div id="bike4" class="unselectedMachine"></div>
-    <div id="bike5" class="unselectedMachine"></div>
-    <!-- BIKES (BIKESAL): -->
-    <div id="bike6" class="unselectedMachine"></div>
-    <div id="bike7" class="unselectedMachine"></div>
-    <div id="bike8" class="unselectedMachine"></div>
-    <div id="bike9" class="unselectedMachine"></div>
-    <div id="bike10" class="unselectedMachine"></div>
-    <div id="bike11" class="unselectedMachine"></div>
-    <div id="bike12" class="unselectedMachine"></div>
-    <div id="bike13" class="unselectedMachine"></div>
-    <div id="bike14" class="unselectedMachine"></div>
-    <div id="bike15" class="unselectedMachine"></div>
-    <div id="bike16" class="unselectedMachine"></div>
-    <div id="bike17" class="unselectedMachine"></div>
-    <div id="bike18" class="unselectedMachine"></div>
-    <div id="bike19" class="unselectedMachine"></div>
-    <div id="bike20" class="unselectedMachine"></div>
-    <div id="bike21" class="unselectedMachine"></div>
-    <!-- KETTLEBELLS: -->
-    <div id="kettlebells1" class="unselectedMachine"></div>
-    <div id="kettlebells2" class="unselectedMachine"></div>
-    <!-- CABLETOWERS: -->
-    <div id="cabletower1" class="unselectedMachine"></div>
-    <div id="cabletower2" class="unselectedMachine"></div>
-    <!-- HANDWEIGHTS: -->
-    <div id="handweight1" class="unselectedMachine"></div>
-    <div id="handweight2" class="unselectedMachine"></div>
-    <div id="handweight3" class="unselectedMachine"></div>
-    <div id="handweight4" class="unselectedMachine"></div>
-    <div id="handweight5" class="unselectedMachine"></div>
-    <div id="handweight6" class="unselectedMachine"></div>
-    <div id="handweight7" class="unselectedMachine"></div>
-    <div id="handweight8" class="unselectedMachine"></div>
-    <div id="handweight9" class="unselectedMachine"></div>
-    <div id="handweight10" class="unselectedMachine"></div>
-    <!-- LEGPRESS: -->
-    <div id="legpress" class="unselectedMachine"></div>
-    <!-- STAIRWALKERS: -->
-    <div id="stairwalker1" class="unselectedMachine"></div>
-    <div id="stairwalker2" class="unselectedMachine"></div>
-    <div id="stairwalker3" class="unselectedMachine"></div>
-    <div id="stairwalker4" class="unselectedMachine"></div>
-    <div id="stairwalker5" class="unselectedMachine"></div>
-    <!-- SKIING MACHINES: -->
-    <div id="skiing1" class="unselectedMachine"></div>
-    <div id="skiing2" class="unselectedMachine"></div>
-    <div id="skiing3" class="unselectedMachine"></div>
-    <div id="skiing4" class="unselectedMachine"></div>
-    <div id="skiing5" class="unselectedMachine"></div>
-    <!-- BENCHES: -->
-    <div id="bench1" class="unselectedMachine"></div>
-    <div id="bench2" class="unselectedMachine"></div>
-    <div id="bench3" class="unselectedMachine"></div>
-    <div id="bench4" class="unselectedMachine"></div>
-    <div id="bench5" class="unselectedMachine"></div>
-    <div id="bench6" class="unselectedMachine"></div>
-    <div id="bench7" class="unselectedMachine"></div>
-    <div id="bench8" class="unselectedMachine"></div>
-    <!-- ABCRUNCH: -->
-    <div id="abcrunch" class="unselectedMachine"></div>
-    <!-- CHESTPRESS: -->
-    <div id="chestpress" class="unselectedMachine"></div>
-    <!-- DEADLIFTS: -->
-    <div id="deadlift1" class="unselectedMachine"></div>
-    <div id="deadlift2" class="unselectedMachine"></div>
-    <div id="deadlift3" class="unselectedMachine"></div>
-    <div id="deadlift4" class="unselectedMachine"></div>
-    <!-- SEATED ROW: -->
-    <div id="seatedrow" class="unselectedMachine"></div>
+<section id="mainSection">
+    <section id="map">
+        <img src="Fitness_Background.png">
+        <!-- TREADMILLS: -->
+        <div id="treadmill1" class="unselectedMachine"></div>
+        <div id="treadmill2" class="unselectedMachine"></div>
+        <div id="treadmill3" class="unselectedMachine"></div>
+        <div id="treadmill4" class="unselectedMachine"></div>
+        <div id="treadmill5" class="unselectedMachine"></div>
+        <!-- BIKES (NOT BIKESAL): -->
+        <div id="bike1" class="unselectedMachine"></div>
+        <div id="bike2" class="unselectedMachine"></div>
+        <div id="bike3" class="unselectedMachine"></div>
+        <div id="bike4" class="unselectedMachine"></div>
+        <div id="bike5" class="unselectedMachine"></div>
+        <!-- BIKES (BIKESAL): -->
+        <div id="bike6" class="unselectedMachine"></div>
+        <div id="bike7" class="unselectedMachine"></div>
+        <div id="bike8" class="unselectedMachine"></div>
+        <div id="bike9" class="unselectedMachine"></div>
+        <div id="bike10" class="unselectedMachine"></div>
+        <div id="bike11" class="unselectedMachine"></div>
+        <div id="bike12" class="unselectedMachine"></div>
+        <div id="bike13" class="unselectedMachine"></div>
+        <div id="bike14" class="unselectedMachine"></div>
+        <div id="bike15" class="unselectedMachine"></div>
+        <div id="bike16" class="unselectedMachine"></div>
+        <div id="bike17" class="unselectedMachine"></div>
+        <div id="bike18" class="unselectedMachine"></div>
+        <div id="bike19" class="unselectedMachine"></div>
+        <div id="bike20" class="unselectedMachine"></div>
+        <div id="bike21" class="unselectedMachine"></div>
+        <!-- KETTLEBELLS: -->
+        <div id="kettlebells1" class="unselectedMachine"></div>
+        <div id="kettlebells2" class="unselectedMachine"></div>
+        <!-- CABLETOWERS: -->
+        <div id="cabletower1" class="unselectedMachine"></div>
+        <div id="cabletower2" class="unselectedMachine"></div>
+        <!-- HANDWEIGHTS: -->
+        <div id="handweight1" class="unselectedMachine"></div>
+        <div id="handweight2" class="unselectedMachine"></div>
+        <div id="handweight3" class="unselectedMachine"></div>
+        <div id="handweight4" class="unselectedMachine"></div>
+        <div id="handweight5" class="unselectedMachine"></div>
+        <div id="handweight6" class="unselectedMachine"></div>
+        <div id="handweight7" class="unselectedMachine"></div>
+        <div id="handweight8" class="unselectedMachine"></div>
+        <div id="handweight9" class="unselectedMachine"></div>
+        <div id="handweight10" class="unselectedMachine"></div>
+        <!-- LEGPRESS: -->
+        <div id="legpress" class="unselectedMachine"></div>
+        <!-- STAIRWALKERS: -->
+        <div id="stairwalker1" class="unselectedMachine"></div>
+        <div id="stairwalker2" class="unselectedMachine"></div>
+        <div id="stairwalker3" class="unselectedMachine"></div>
+        <div id="stairwalker4" class="unselectedMachine"></div>
+        <div id="stairwalker5" class="unselectedMachine"></div>
+        <!-- SKIING MACHINES: -->
+        <div id="skiing1" class="unselectedMachine"></div>
+        <div id="skiing2" class="unselectedMachine"></div>
+        <div id="skiing3" class="unselectedMachine"></div>
+        <div id="skiing4" class="unselectedMachine"></div>
+        <div id="skiing5" class="unselectedMachine"></div>
+        <!-- BENCHES: -->
+        <div id="bench1" class="unselectedMachine"></div>
+        <div id="bench2" class="unselectedMachine"></div>
+        <div id="bench3" class="unselectedMachine"></div>
+        <div id="bench4" class="unselectedMachine"></div>
+        <div id="bench5" class="unselectedMachine"></div>
+        <div id="bench6" class="unselectedMachine"></div>
+        <div id="bench7" class="unselectedMachine"></div>
+        <div id="bench8" class="unselectedMachine"></div>
+        <!-- ABCRUNCH: -->
+        <div id="abcrunch" class="unselectedMachine"></div>
+        <!-- CHESTPRESS: -->
+        <div id="chestpress" class="unselectedMachine"></div>
+        <!-- DEADLIFTS: -->
+        <div id="deadlift1" class="unselectedMachine"></div>
+        <div id="deadlift2" class="unselectedMachine"></div>
+        <div id="deadlift3" class="unselectedMachine"></div>
+        <div id="deadlift4" class="unselectedMachine"></div>
+        <!-- SEATED ROW: -->
+        <div id="seatedrow" class="unselectedMachine"></div>
+    </section>
+    <section id="infoTab">
+        <div class="infobox">
+            <p>name: hello</p>
+        </div>
+    </section>
 </section>
-<section id="infoTab">
 
-</section>
 <footer>
 
 </footer>
