made the searchfilters work by requesting the params from the backend

--- a/index.html
+++ b/index.html
@@ -10,40 +10,45 @@
 <header>
     <h1>Fitness Workout Locator</h1>
     <nav>
-        <section>
-            <input id="searchbar">
-        </section>
-        <section id="mucleFilter">
-            <div>
-                <input type="checkbox">
-                <label>bicpts</label>
-            </div>
-            <div>
-                <input type="checkbox">
-                <label>core</label>
-            </div>
-            <div>
-                <input type="checkbox">
-                <label>checkbox3</label>
-            </div>
-            <div>
-                <input type="checkbox">
-                <label>checkbox4</label>
-            </div>
-        </section>
-        <section id="difficultyFilter">
-            <div>
-                <input type="checkbox">
-                <label>easy</label>
-            </div>
-            <div>
-                <input type="checkbox">
-                <label>medium</label>
-            </div>
-            <div>
-                <input type="checkbox">
-                <label>hard</label>
-            </div>
+        <section id="searchwindow">
+            <section>
+                <input id="searchbar">
+            </section>
+            <section id="mucleFilter">
+                <div>
+                    <input type="checkbox">
+                    <label>bicpts</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>core</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>checkbox3</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>checkbox4</label>
+                </div>
+            </section>
+            <section id="difficultyFilter">
+                <div>
+                    <input type="checkbox">
+                    <label>easy</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>medium</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>hard</label>
+                </div>
+            </section>
+            <section>
+                <button id="searchButton">Search</button>
+            </section>
         </section>
         <section id="machineFilter">
             <button id="toggleButton">Show Machines</button>
@@ -102,9 +107,7 @@
             </div>
             </div>
         </section>
-        <section>
-            <button id="searchButton">Search</button>
-        </section>
+
     </nav>
 </header>
 <section id="mainSection">
@@ -192,9 +195,7 @@
         <div id="seatedrow" class="unselectedMachine"></div>
     </section>
     <section id="infoTab">
-        <div class="infobox">
-            <p>name: hello</p>
-        </div>
+
     </section>
 </section>
 
