--- a/index.html
+++ b/index.html
@@ -8,42 +8,87 @@
 </head>
 <body>
 <header>
-    <h1>Fitness Workout Locator</h1>
+    <h1>Fitness Machine Finder</h1>
     <nav>
         <section id="searchwindow">
             <section>
                 <input id="searchbar">
             </section>
-            <section id="mucleFilter">
+            <section id="muscleFilter">
+                <h2>Muscles</h2>
                 <div>
                     <input type="checkbox">
-                    <label>bicpts</label>
+                    <label>Biceps</label>
                 </div>
                 <div>
                     <input type="checkbox">
-                    <label>core</label>
+                    <label>Abs</label>
                 </div>
                 <div>
                     <input type="checkbox">
-                    <label>checkbox3</label>
+                    <label>Triceps</label>
                 </div>
                 <div>
                     <input type="checkbox">
-                    <label>checkbox4</label>
+                    <label>Chest</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>Shoulder</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>Upper back</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>Lower back</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>Back</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>Thighs</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>Butt</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>Calves</label>
                 </div>
             </section>
             <section id="difficultyFilter">
+                <h2>Difficulty</h2>
                 <div>
                     <input type="checkbox">
-                    <label>easy</label>
+                    <label>Easy</label>
                 </div>
                 <div>
                     <input type="checkbox">
-                    <label>medium</label>
+                    <label>Medium</label>
                 </div>
                 <div>
                     <input type="checkbox">
-                    <label>hard</label>
+                    <label>Hard</label>
+                </div>
+            </section>
+            <section id="dangerFilter">
+                <h2>Risk of injury</h2>
+                <div>
+                    <input type="checkbox">
+                    <label>Low</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>Medium</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>High</label>
                 </div>
             </section>
             <section>
