update for for dynamic filter

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <input id="searchbar">
             </section>
             <section id="mucleFilter">
-                <div> /*this will be replaced */
+                <div> /*this will be replaced yes */
                     <input type="checkbox">
                     <label>example</label>
                 </div>
