--- a/index.html
+++ b/index.html
@@ -38,64 +38,14 @@
                 <button id="searchButton">Search</button>
             </section>
         </section>
-        <section>
-            <p>direct selector</p>
+        <section id="machineDirectSearch">
+            <div>
+                <p>direct selector (click)</p>
+                <button id="machineDirectSearchResetButton">reset</button>
+            </div>
+
             <section id="machineFilter">
-                <button id="toggleButton">Show Machines</button>
-                <div id="filterContent" style="display: none;">
-                    <div>
-                        <input type="checkbox" name="machine" value="treadmill">
-                        <label>Treadmill</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="bike">
-                        <label>Bike</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="kettlebells">
-                        <label>Kettlebell</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="cabletower">
-                        <label>Cabletower</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="handweight">
-                        <label>Handweight</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="legpress">
-                        <label>Legpress</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="stairwalker">
-                        <label>Stairwalker</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="skiing">
-                        <label>Skiing</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="bench">
-                        <label>Bench</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="abcrunch">
-                        <label>Abcrunch</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="chestpress">
-                        <label>Chestpress</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="deadlift">
-                        <label>Deadlift</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="machine" value="seatedrow">
-                        <label>Seatedrow</label>
-                    </div>
-                </div>
+                this is made in the directmachinesearchfunction
             </section>
         </section>
     </nav>
